Aumentato Requerimientos Docente